# CryptumText

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  deny.toml
licenses/: LICENSES-MANUAL.md
src/: app.rs  app_model.rs  app_update.rs  app_view.rs  files_dirs.rs  fs_module.rs  main.rs  menu_module.rs  program_model.rs  update.rs  util.rs  util_dialogs.rs  util_fs.rs  util_menu.rs  util_widget.rs  view.rs  widget_module.rs
src/app/: model.rs  update.rs  view.rs
src/files_dirs/: file.rs  file_list.rs  folder.rs  settings.rs
src/fs/: file.rs  folder.rs  settings.rs
src/util/: dialogs.rs  fs.rs  menu.rs  widget.rs
