[package]
name = "cryptum-text"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
dirs = "6.0.0"
gtk4 = "0.9.6"
libadwaita = { version = "0.7.2", features = ["v1_5", "v1_7"] }
open = "5.3.2"
relm4 = "0.9.1"
relm4-components = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sourceview5 = "0.9.1"
trash = "5.2.2"

[profile.release]
opt-level = 3
lto = "fat"
